# kvvm

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .vimrc  CMakeLists.txt  README.md
src/: blob.cpp  blob.hpp  cell.cpp  cell.hpp  dbg.cpp  dbg.hpp  hash.cpp  hash.hpp  hps.h  istore.cpp  istore.hpp  query.cpp  query.hpp  rowbank.cpp  rowbank.hpp  schema.cpp  schema.hpp  serialize.cpp  serialize.hpp  table.cpp  table.hpp  udf.cpp  udf.hpp  wasm_runtime.cpp  wasm_runtime.hpp
src/udfs/: .gitignore  CMakeLists.txt
src/udfs/rust-hello-world/: Cargo.toml
src/udfs/rust-hello-world/src/: lib.rs
src/udfs/wasi-hello-world/: package-lock.json  package.json
src/udfs/wasi-hello-world/assembly/: tsconfig.json
test/: blob_test.cpp  hash_test.cpp  istore_test.cpp  query_test.cpp  rowbank_test.cpp  schema_test.cpp  serialize_test.cpp  table_test.cpp  udf_test.cpp  wasm_test.cpp
